Closed
Bug 810592
Opened 13 years ago
Closed 13 years ago
Add-ons manager has full page invalidation
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: mayankleoboy1, Assigned: mattwoodrow)
References
Details
(Whiteboard: [qa?])
Attachments
(2 files)
|
5.72 KB,
text/plain
|
Details | |
|
1.33 KB,
patch
|
roc
:
review+
akeybl
:
approval-mozilla-aurora+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0
Build ID: 20121110030714
Steps to reproduce:
1. Enable debug flash
2. open Add-ons manager.
3. Open the "get add-ons " tab
4. wait for loading the page
5. Scroll.
If you have enough Extensions or plugins to warrant a scroll, this can be repro on extensions and add-ons tab too.
Actual results:
Full page constant invalidation
Expected results:
minimal invalidation.
This also happens on FF15. So this is not a recent regression.
Comment 1•13 years ago
|
||
What is a "constant invalidation"?
| Reporter | ||
Comment 2•13 years ago
|
||
it means that when you are scrolling, the page is repainting again and again.
Comment 3•13 years ago
|
||
No regression range found with the pref —
nglayout.debug.paint_flashing has no effect: 2011-11-01 03:11:08.en-US.linux-x86_64
reproduced: 2011-11-18 03:10:05-en-US-x86_64
Updated•13 years ago
|
Component: Untriaged → Layout
Product: Firefox → Core
| Assignee | ||
Comment 4•13 years ago
|
||
This is because the clip that we cache for display items is a stack of clips, and some components of the clip are above the frame that is scrolled.
Attempting to shift the combined clip to compensate for scrolling results in the wrong area, and with rounded corner clipping we invalidate the union of the areas.
Creating an nsDisplayOwnLayer for the iframe separates the clips so that this doesn't occur. I wonder if we want to do this for all actively scrolled frames, not just subdocuments.
Attachment #682980 -
Flags: review?(roc)
(In reply to Matt Woodrow (:mattwoodrow) from comment #4)
> Creating an nsDisplayOwnLayer for the iframe separates the clips so that
> this doesn't occur. I wonder if we want to do this for all actively scrolled
> frames, not just subdocuments.
I think that would work. We probably shouldn't try to do it on FF18 though!
Attachment #682980 -
Flags: review?(roc) → review+
tracking-firefox18:
--- → ?
Updated•13 years ago
|
Assignee: nobody → matt.woodrow
| Assignee | ||
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Push backed out for reftest failures:
https://tbpl.mozilla.org/?tree=Mozilla-Inbound&rev=d30b99cfd933&jobname=%20reftest
https://hg.mozilla.org/integration/mozilla-inbound/rev/dd00a3bad021
| Assignee | ||
Comment 8•13 years ago
|
||
Comment 9•13 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 10•13 years ago
|
||
Please nominate for uplift as soon as you're confident with the change on m-c.
Comment 11•13 years ago
|
||
(In reply to mayankleoboy1 from comment #2)
> it means that when you are scrolling, the page is repainting again and again.
I'm not seeing a stable painting in Addons Manager on Nightly 20.0a1 (2012-12-02)
| Assignee | ||
Comment 12•13 years ago
|
||
Comment on attachment 682980 [details] [diff] [review]
Make iframes with active scrolling build their own layer
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Not a regression, always performed badly
User impact if declined: Slow scrolling within iframes with rounded rect clipping.
Testing completed (on m-c, etc.): Been on m-c for a week.
Risk to taking this patch (and alternatives if risky): Fairly low risk, just changes how we break up the retained content.
String or UUID changes made by this patch: None
Attachment #682980 -
Flags: approval-mozilla-beta?
Attachment #682980 -
Flags: approval-mozilla-aurora?
Comment 13•13 years ago
|
||
Comment on attachment 682980 [details] [diff] [review]
Make iframes with active scrolling build their own layer
This is a "regression" from DLBI. Approving for Aurora/Beta given where we are in the cycle and the risk profile of this fix.
Attachment #682980 -
Flags: approval-mozilla-beta?
Attachment #682980 -
Flags: approval-mozilla-beta+
Attachment #682980 -
Flags: approval-mozilla-aurora?
Attachment #682980 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 14•13 years ago
|
||
Updated•13 years ago
|
| Reporter | ||
Comment 15•13 years ago
|
||
Is this patch present in the latest Nightly ?
Comment 16•13 years ago
|
||
(In reply to mayankleoboy1 from comment #15)
> Is this patch present in the latest Nightly ?
It should be, but I don't think it's really fixed as I already said in comment 11. The same unstable painting is seen in FF 18b3.
Updated•13 years ago
|
OS: Windows 7 → All
| Reporter | ||
Comment 17•13 years ago
|
||
FWIW, with HWA off, the issue is much worse.
You need to log in
before you can comment on or make changes to this bug.
Description
•