Bug 810592 - Make nsSubDocumentFrames that are actively scrolling build their own layer. r=roc