layout/generic/nsSubDocumentFrame.cpp
@@ -414,7 +414,10 @@ nsSubDocumentFrame::BuildDisplayList(nsDisplayListBuilder*   aBuilder,
     childItems.AppendToTop(zoomItem);
   }
 
-  if (!addedLayer && presContext->IsRootContentDocument()) {
+  nsIScrollableFrame *sf = presShell->GetRootScrollFrameAsScrollable();
+  if (!addedLayer &&
+      (presContext->IsRootContentDocument() ||
+       (sf && sf->IsScrollingActive()))) {
     // We always want top level content documents to be in their own layer.
     nsDisplayOwnLayer* layerItem = new (aBuilder) nsDisplayOwnLayer(
       aBuilder, subdocRootFrame ? subdocRootFrame : this, 
